Implement approveReturnOfBorrowedBook API